// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render 1`] = `
<div>
  <input
    class="Checkbox-sc-17gwqiq-0 cZgJoF"
    color="success"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox should render a danger color 1`] = `
<div>
  <input
    class="Checkbox-sc-17gwqiq-0 kWSgFZ"
    color="danger"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox should render a primary color 1`] = `
<div>
  <input
    class="Checkbox-sc-17gwqiq-0 boTHSi"
    color="primary"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox should render a success color 1`] = `
<div>
  <input
    class="Checkbox-sc-17gwqiq-0 cZgJoF"
    color="success"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox should render a warning color 1`] = `
<div>
  <input
    class="Checkbox-sc-17gwqiq-0 irHZQw"
    color="warning"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox should render thick variant 1`] = `
<div>
  <input
    class="Checkbox-sc-17gwqiq-0 QseRF"
    color="success"
    type="checkbox"
  />
</div>
`;
